--- a/public/index.html
+++ b/public/index.html
@@ -341,10 +341,10 @@
           <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/port1.jpg" class="img-fluid" alt="" />
+                <img src="assets/img/port1.jpg" class="img-fluid" alt="" />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/port1.jpg"
+                    href="assets/img/port1.jpg"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Practicing HTML Forms with CSS styling."
@@ -359,10 +359,10 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/port2.jpg" class="img-fluid" alt="" />
+                <img src="assets/img/port2.jpg" class="img-fluid" alt="" />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/port2.jpg"
+                    href="assets/img/port2.jpg"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="HTML Flexbox Lab."
@@ -375,10 +375,10 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/port3.JPG" class="img-fluid" alt="" />
+                <img src="assets/img/port3.JPG" class="img-fluid" alt="" />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/port3.jpg"
+                    href="assets/img/port3.jpg"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="My most recent hands on test about bootstrap with CSS and HTML."
@@ -392,7 +392,7 @@
             </div>
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/port6.jpg" class="img-fluid" alt="" />
+                <img src="assets/img/port6.jpg" class="img-fluid" alt="" />
                 <div class="portfolio-links">
                   <a
                     href="assets/img/portfolio/port6.jpg"
@@ -408,10 +408,10 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/port7.jpg" class="img-fluid" alt="" />
+                <img src="assets/img/port7.jpg" class="img-fluid" alt="" />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/port7.jpg"
+                    href="assets/img/port7.jpg"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Chapter 11 HW Bootstrap"
@@ -426,10 +426,10 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/port8.jpg" class="img-fluid" alt="" />
+                <img src="assets/img/port8.jpg" class="img-fluid" alt="" />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/port8.jpg"
+                    href="assets/img/port8.jpg"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Chapter 3 HTML HW"
@@ -444,10 +444,10 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/port10.JPG" class="img-fluid" alt="" />
+                <img src="assets/img/port10.JPG" class="img-fluid" alt="" />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/port10.JPG"
+                    href="assets/img/port10.JPG"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Midterm for client; redesigning at the moment"
