updated images again

--- a/public/index.html
+++ b/public/index.html
@@ -375,7 +375,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
-                <img src="assets/img/port3.JPG" class="img-fluid" alt="" />
+                <img src="assets/img/port3.jpg" class="img-fluid" alt="" />
                 <div class="portfolio-links">
                   <a
                     href="assets/img/port3.jpg"
@@ -444,10 +444,10 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
-                <img src="assets/img/port10.JPG" class="img-fluid" alt="" />
+                <img src="assets/img/port10.jpg" class="img-fluid" alt="" />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/port10.JPG"
+                    href="assets/img/port10.jpg"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Midterm for client; redesigning at the moment"
