--- a/public/index.html
+++ b/public/index.html
@@ -177,12 +177,12 @@
               </div>
 
               <div class="progress">
-                <span class="skill">Java <i class="val">0%</i></span>
+                <span class="skill">React <i class="val">0%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
                     role="progressbar"
-                    aria-valuenow="0"
+                    aria-valuenow="40"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
@@ -197,7 +197,7 @@
                   <div
                     class="progress-bar"
                     role="progressbar"
-                    aria-valuenow="0"
+                    aria-valuenow="60"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
@@ -210,7 +210,7 @@
                   <div
                     class="progress-bar"
                     role="progressbar"
-                    aria-valuenow="0"
+                    aria-valuenow="70"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
@@ -223,7 +223,7 @@
                   <div
                     class="progress-bar"
                     role="progressbar"
-                    aria-valuenow="0"
+                    aria-valuenow="50"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
